# careergrep

./: .env.example  .gitignore  CLAUDE.md  PLAN.md  README.md  config.yaml  pyproject.toml
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: FilterBar.tsx  JobCard.tsx
frontend/src/types/: job.ts
src/careergrep/: api.py  cli.py  db.py  log.py  models.py  pipeline.py
src/careergrep/delivery/: email.py
src/careergrep/scoring/: claude_scorer.py  keyword.py
src/careergrep/sources/: arbeitnow.py  ashby.py  base.py  greenhouse.py  lever.py  remoteok.py  themuse.py  workable.py
src/careergrep/templates/: digest.html
src/jobs_radar/: cli.py  config.py  db.py  models.py  pipeline.py
src/jobs_radar/delivery/: email.py
src/jobs_radar/scoring/: keyword.py
src/jobs_radar/sources/: arbeitnow.py  ashby.py  base.py  greenhouse.py  lever.py  themuse.py  workable.py
src/jobs_radar/templates/: digest.html
tests/: conftest.py  test_job_classification.py  test_keyword_scoring.py  test_pipeline_filters.py
